# supervise

./: .dir-locals.el  .gitignore  LICENSE  Makefile  Makefile.am  README.md  README.org  autosleeper.py  common.c  common.h  configure.ac  default.nix  notes.org  procfd.c  subreap.c  subreap_lib.c  subreap_lib.h  supervise.c  supervise.py  unlinkwait.c
c/: Makefile.am  configure.ac  default.nix  supervise.pc.in
c/src/: Makefile.am  common.c  common.h  libsupervise.c  subreap_lib.c  supervise.c  supervise.h  supervise_libexec.c  supervise_protocol.h
python/: README.rst  default.nix  ffibuilder.py  setup.py
python/supervise_api/: __init__.py  autosleeper.py  libexec.py  supervise.py
python/supervise_api/tests/: test_libexec.py  test_supervise.py
src/: Makefile.am  subreap_lib.c  subreap_lib.h  supervise.c
